# xemantic-ai-workshop

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ai_glossary.md  build.gradle.kts  package-lock.json  package.json  pyproject.toml  settings.gradle.kts  tsconfig.json
gradle/: libs.versions.toml
src/main/kotlin/: Demo010HelloWorld.kt  Demo015ResponseStreaming.kt  Demo020Conversation.kt  Demo030ConversationLoop.kt  Demo040ToolsInTheHandsOfAi.kt  Demo050OpenCallsExtractor.kt  Demo05OpenCallsExtractor.kt  Demo061OcrKeyFinancialMetrics.kt  Demo06PlayMusicFromNotes.kt  Demo070PlayMusicFromNotes.kt  Demo071OcrKeyFinancialMetrics.kt  Demo07ClaudeAiArtist.kt  Demo08DrawOnMonaLisa.kt  Demo090ClaudeAiArtist.kt  Demo090DrawOnMonaLisa.kt  Demo100AffirmationMirror.kt  Demo100MeanMirror.kt  Demo110TruthTerminal.kt  Demo120AiAsComputationalArtist.kt  DemoNew020ResponseStreamingWithAPoem.kt  TruthTerminal.kt
src/main/kotlin/intro/: Kotlin010HelloWorld.kt  (+5 more)
src/main/python/: demo_010_hello_world.py  demo_015_response_streaming.py  demo_020_conversation.py  demo_02_conversation.py  demo_030_conversation_loop.py  demo_03_conversation_loop.py  demo_040_tools_in_the_hands_of_ai.py  demo_050_open_calls_extractor.py  demo_061_ocr_key_financial_metrics.py  hello_world.py
src/main/typescript/: Demo010HelloWorld.ts  Demo015ResponseStreaming.ts  Demo01HelloWorld.ts  Demo020Conversation.ts  Demo02Conversation.ts  Demo030ConversationLoop.ts  Demo03ConversationLoop.ts  Demo040ToolsInTheHandsOfAi.ts  Demo050OpenCallsExtractor.ts  Demo061OcrKeyFinancialMetrics.ts  hello-world.ts
(+4 files in other folders)
