[project]
name = "xemantic-ai-workshop"
version = "1.0.0"
description = "Agentic AI & Creative Coding Workshop"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src/main/python"}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"